--- a/.gitignore
+++ b/.gitignore
@@ -18,17 +18,10 @@
 #*.zip
 *.tar.gz
 *.rar
+*.odb
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/_code/Programacion/build/*/*/*/*/*/*/*/*
-/_code/Programacion/dist/
-/_code/Programacion/nbproject/private/
-/_code/vsCode/calculadora/target/
-/_codeNBFX/CalculadoraNBFX/nbproject/private/
-/_codeNBFX/CalculadoraNBFX/build/
-/_code/CalculadoraNBFX/build/
-/_code/CalculadoraNBFX/nbproject/private/
-/_code/Programacion/out/
-/_code/javafx-sdk-21.0.3
-/_code/mysql-connector-j-9.0.0
+/_code/EjemplosOld
+/_code/UD08
+/_code/UD11
